@@ -150,6 +150,7 @@
 	* UniqueFQDNSet
 		* new routes to modify a set by add/remove domains
 		* with tests!
+	* added openssl fallback routines, and tests, for pkcs7 conversion
 	+ other fixes and improvements
 
 0.4.0
